fixCheckbox 	• changed file structure to pull dev files out of prod 	• added npm command to watch changes on coffee and styl files 	• fixed layout.jade to reflect changes 	• .delete-item top: changed from -1px to 8px to fix alignment

--- a/dev/styles/main.styl
+++ b/dev/styles/main.styl
@@ -183,7 +183,7 @@ input[type=checkbox]
   height 30px
   padding 2px
   margin-left 4px
-  top -1px
+  top 8px
   transition-property transform
   transition-duration 0.4s
   @media screen and (max-width: 770px)
